2008-07-16  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-window.c: Sync display on end of window creation.

2008-07-15  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-window.c: Damage screen region covered by window on unmap.
    
2008-07-15  Nicolas Bruguier  <gandalfn@club-internet.fr>
    
    * src/ccm-screen.c: Consider first window opaque viewable which covered
                        all screen as desktop type window.
                        
2008-07-15  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/menu-animation/ccm-menu-animation.c: Set animation depending the 
                                                   mouse on map.
    * plugins/opacity/ccm-opacity.c: Don't set opacity only change property.
    
    * plugins/fade/ccm-fade.c: 
    * plugins/menu-animation/ccm-menu-animation.c:
    * src/ccm-screen.c:
    * src/ccm-screen.h: Support dynamic change of refresh rate.
    
    * plugins/shadow/ccm-shadow.c: Check if window need shadow on paint.
    
    * src/ccm-pixmap-buffered-image.c:
    * src/ccm-pixmap-image.c: Freeze pixmap on window destroy.
    
    * src/ccm-window.c:
    * src/ccm-screen.c: Fix flickering on window destroy.

2008-07-03  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-screen.c: Damage window which is in remove pending in check stack.
    * src/ccm-window.c: Ignore silently window paint with alpha 0.

2008-07-02  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-pixmap.c:
    * src/ccm-screen.c:
    * src/ccm-window.c: Wait unmap is finished to remove window when an 
                        animation is started.

2008-07-01  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-window.c: Sync display on ccm_window_new

2008-06-29  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-window.c: Don't buffering undecorated and input only window.

2008-06-28  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/fade/ccm-fade.c: